--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                     <p>
                         To safely navigate the risk of advanced AI, we need technology which enables coordination,
                         empowers
-                        human groups to think clearly, and prevents disastrous conflicts. The order in which technology
-                        is
-                        developed matters. We aim to accelerate work which uses recent advances in AI capabilities to
+                        human groups to think clearly, and prevents disastrous conflicts. <b>The order in which
+                            technology
+                            is
+                            developed matters.</b> We aim to accelerate work which uses recent advances in AI
+                        capabilities to
                         enable
                         better collective reasoning and coordination, and gives people the ability to navigate an
                         uncertain
@@ -86,8 +88,9 @@
                         Our mission is to improve human reasoning at the group level, focusing on the ways in which
                         people
                         communicate information and resolve disagreements. In particular, we are prototyping the use of
-                        AI
-                        to mediate group deliberation. This means both using AI to intervene on the dynamics of a
+                        <b>AI
+                            to mediate group deliberation</b>. This means both using AI to intervene on the dynamics of
+                        a
                         discussion, as well as being an interface for people to better understand the content of what is
                         being discussed. We are pioneering new architectures for group dialogue and reasoning, finding
                         ways
@@ -105,7 +108,8 @@
                         toward improved human reasoning, large scale collaboration, and coordinated action.
                     </p>
                     <p>
-                        Software can often serve as a nucleation site for dialogue, and become a part of the ontology we
+                        Software can often serve as a <b>nucleation site for dialogue</b>, and become a part of the
+                        ontology we
                         use
                         to think about the future (e.g. federated social networks, Polis/Community Notes, or Loom). Our
                         philosophy is to advance the discussion about AI development by building software which embodies
@@ -119,7 +123,8 @@
                 <div class="details-content">
                     <p>
                         AI systems are improving rapidly. For this reason, it’s important that work to augment human
-                        reasoning improves alongside AI capability advancements, and is not made obsolete by them.
+                        reasoning <b>improves alongside AI capability advancements</b>, and is not made obsolete by
+                        them.
                         Furthermore, better human reasoning and decision making is critical to navigating the transition
                         to
                         superhuman AI safely, and making the right choices about how to engineer the future we want.
