--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Labs</title>
-    <meta name="description" content="Building AI-empowered metacognition and collective intelligence">
+    <meta name="description" content="">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" type="image/png" sizes="32x32" href="public/cherry-blossom-32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="public/cherry-blossom-16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="public/cherry-blossom-180.png">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mosaiclabs.ai/">
+    <meta property="og:url" content="https://www.mosaic-labs.org/">
     <meta property="og:title" content="Mosaic Labs">
-    <meta property="og:description" content="Building AI-empowered metacognition and collective intelligence">
+    <meta property="og:description" content="">
     <!-- <meta property="og:image" content="https://www.yourwebsite.com/path-to-your-image.jpg"> -->
 
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:url" content="https://www.mosaiclabs.ai/">
+    <meta property="twitter:url" content="https://www.mosaic-labs.org/">
     <meta property="twitter:title" content="Mosaic Labs">
     <meta property="twitter:description" content="Building AI-empowered metacognition and collective intelligence">
 </head>
