--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Labs</title>
-    <meta name="description" content="">
+    <meta name="description" content="Building interfaces for AI-assisted collaboration and deliberation">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/cherry-blossom-32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/cherry-blossom-16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="public/cherry-blossom-180.png">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.mosaic-labs.org/">
     <meta property="og:title" content="Mosaic Labs">
-    <meta property="og:description" content="">
-    <!-- <meta property="og:image" content="https://www.yourwebsite.com/path-to-your-image.jpg"> -->
+    <meta property="og:description" content="Building interfaces for AI-assisted collaboration and deliberation">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://www.mosaic-labs.org/">
     <meta property="twitter:title" content="Mosaic Labs">
-    <meta property="twitter:description" content="Building AI-empowered metacognition and collective intelligence">
+    <meta property="twitter:description" content="Building interfaces for AI-assisted collaboration and deliberation">
 </head>
 
 <!-- Add Google tag (gtag.js) -->
@@ -28,32 +24,23 @@
     <div class="hero">
         <div class="text-center">
             <h1 class="title">Mosaic Labs</h1>
-            <div class="subtitle">Building interfaces for collective intelligence and AI-mediated deliberation</div>
+            <div class="subtitle">Building interfaces for AI-assisted collaboration and deliberation</div>
         </div>
     </div>
     <div class="margin-16px max-width-700">
         <div>
-            <h2>About</h2>
             <p>
-                We develop tools that help groups think better together. Our work explores how AI can enhance collective
-                reasoning while keeping humans meaningfully in the loop.
+                Mosaic is an experimental research lab focused on <b>reducing the risks from advanced AI by improving
+                    the
+                    quality of human reasoning</b>. We build interfaces for <b>AI-mediated collective reasoning and
+                    deliberation</b>,
+                and conduct research into how AI assistance can help humans collaboratively solve problems.
             </p>
             <p>
-                As we approach transformative AI capabilities, the quality of our collective decision-making becomes
-                increasingly critical. We believe that by thoughtfully integrating AI into collaborative interfaces, we
-                can augment human deliberation rather than replace it. Our tools help groups explore disagreements, find
-                unexpected consensus, and make better decisions together.
-            </p>
-            <p>
-                Current projects include experimental interfaces for structured group deliberation, disagreement
-                mapping, and collaborative sense-making. Through these practical explorations, we're working to ensure
-                that human agency and collective wisdom remain central as AI capabilities advance.
-            </p>
-            <p>
-                We're actively researching and prototyping new ways for AI to support group reasoning - from helping
-                surface common ground in contentious discussions to identifying productive directions for further
-                exploration. Our goal is to develop interfaces that grow more capable alongside AI while remaining
-                deeply human-centered.
+                Rapid developments in AI are quickly transforming the future of reasoning, communication, and conflict.
+                Our goal is to <b>ambitiously apply AI to collective deliberation problems</b>, explore the frontier of
+                human-machine collaboration, and to <b>keep human reasoning at the center of institutional
+                    decision-making</b>.
             </p>
         </div>
         <div class="sections" id="accordion">
@@ -62,39 +49,34 @@
                 <div class="details-content">
                     <p>
                         When atomic energy was developed, people gained the power both to produce green energy and to
-                        destroy entire cities. They did not gain the wisdom to use that power responsibly, nor the
-                        ability
+                        kill millions. They did not gain the wisdom to use that power responsibly, nor the ability
                         to ensure their power was used cooperatively for the good of all.
                     </p>
                     <p>
                         To safely navigate the risk of advanced AI, we need technology which enables coordination,
-                        empowers
-                        human groups to think clearly, and prevents disastrous conflicts. <b>The order in which
-                            technology
-                            is
-                            developed matters.</b> We aim to accelerate work which uses recent advances in AI
-                        capabilities to
-                        enable
-                        better collective reasoning and coordination, and gives people the ability to navigate an
-                        uncertain
-                        future.
+                        empowers human groups to think clearly, and prevents disastrous conflicts. <b>The order in which
+                            technology is developed matters</b>. We aim to accelerate work which uses recent advances in
+                        AI
+                        capabilities to enable better collective reasoning and coordination, and gives people the
+                        ability to
+                        navigate an uncertain future.
                     </p>
                 </div>
             </details>
             <details>
-                <summary>Cooperative Architectures</summary>
+                <summary>Architectures for Cooperation</summary>
                 <div class="details-content">
                     <p>
                         Our mission is to improve human reasoning at the group level, focusing on the ways in which
-                        people
-                        communicate information and resolve disagreements. In particular, we are prototyping the use of
-                        <b>AI
-                            to mediate group deliberation</b>. This means both using AI to intervene on the dynamics of
-                        a
-                        discussion, as well as being an interface for people to better understand the content of what is
+                        people communicate information and resolve disagreements. In particular, we are prototyping the
+                        use of
+                        <b>AI to mediate group deliberation</b>. This means both using AI to intervene on the dynamics
+                        of
+                        a discussion, as well as being an interface for people to better understand the content of what
+                        is
                         being discussed. We are pioneering new architectures for group dialogue and reasoning, finding
-                        ways
-                        to integrate the unique abilities of AI systems while keeping humans and human reasoning at the
+                        ways to integrate the unique abilities of AI systems while keeping humans and human reasoning at
+                        the
                         center.
                     </p>
                 </div>
@@ -103,18 +85,21 @@
                 <summary>Code as a Catalyst</summary>
                 <div class="details-content">
                     <p>
-                        We are building experimental interfaces which test new strategies for AI mediate collective
-                        deliberation. By testing and demonstrating new methods, we aim to help grow a movement directed
+                        We are building experimental interfaces which test new strategies for AI-mediated collective
+                        deliberation. By testing and demonstrating new methods, we aim to <b>grow a movement</b>
+                        directed
                         toward improved human reasoning, large scale collaboration, and coordinated action.
                     </p>
                     <p>
                         Software can often serve as a <b>nucleation site for dialogue</b>, and become a part of the
                         ontology we
-                        use
-                        to think about the future (e.g. federated social networks, Polis/Community Notes, or Loom). Our
+                        use to think about the future (e.g. <a href="https://mastodon.social">federated social
+                            networks</a>,
+                        <a href="https://compdemocracy.org/Polis/">Polis</a>/<a
+                            href="https://communitynotes.x.com/guide/en/about/introduction">Community Notes</a>,
+                        or <a href="https://generative.ink/posts/loom-interface-to-the-multiverse/">Loom</a>). Our
                         philosophy is to advance the discussion about AI development by building software which embodies
-                        our
-                        vision for the future.
+                        our vision for the future.
                     </p>
                 </div>
             </details>
@@ -122,12 +107,17 @@
                 <summary>Scaling to Superhuman AI</summary>
                 <div class="details-content">
                     <p>
-                        AI systems are improving rapidly. For this reason, it’s important that work to augment human
-                        reasoning <b>improves alongside AI capability advancements</b>, and is not made obsolete by
-                        them.
-                        Furthermore, better human reasoning and decision making is critical to navigating the transition
-                        to
-                        superhuman AI safely, and making the right choices about how to engineer the future we want.
+                        AI systems are improving rapidly. For this reason, it's important that work to augment human
+                        reasoning <b>improves alongside AI capability advancements</b>, and is not replaced or made
+                        obsolete by
+                        them. Better human reasoning and decision making is critical to navigating the transition
+                        to superhuman AI safely, and making the right choices about how to engineer the future we want.
+                    </p>
+                    <p>
+                        We are especially concerned that <b>important reasoning may be totally outsourced to AI
+                            systems</b>. For
+                        this reason we are dedicated to keeping humans at the center of our interfaces, and focus our
+                        research on how AI mediation can support entirely human-lead reasoning and discussion.
                     </p>
                 </div>
             </details>
@@ -137,16 +127,15 @@
             <div class="flex-horizontal wrap">
                 <div class="team-member text-center">
                     <img src="images/niki.jpeg" alt="Nicholas Dupuis" class="team-member-image">
-                    <a style="display: block; margin: 8px; color: var(--text-dark);"
-                        href="https://www.lesswrong.com/users/nicholaskees">Nicholas Dupuis</a>
-                    <div class="text-center" style="font-size: 0.8rem; color: var(--text-secondary);">Research Lead
+                    <a style="display: block; margin: 8px;" href="https://www.lesswrong.com/users/nicholaskees">Nicholas
+                        Dupuis</a>
+                    <div class="text-center" style="font-size: 0.8rem; color: var(--text-dark);">Research Lead
                     </div>
                 </div>
                 <div class="team-member text-center">
                     <img src="images/sofi.jpeg" alt="Sofia Vanhanen" class="team-member-image">
-                    <a style="display: block; margin: 8px; color: var(--text-dark);"
-                        href="https://sofiavanhanen.fi">Sofia Vanhanen</a>
-                    <div style="font-size: 0.8rem; color: var(--text-secondary);">Technology Lead
+                    <a style="display: block; margin: 8px;" href="https://sofiavanhanen.fi">Sofia Vanhanen</a>
+                    <div style="font-size: 0.8rem; color: var(--text-dark);">Technology Lead
                     </div>
                 </div>
             </div>
