--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     <meta property="twitter:description" content="Building interfaces for AI-assisted collaboration and deliberation">
 </head>
 
-<!-- Add Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXHBJ67PXC"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-YXHBJ67PXC');
+</script>
 
 <body class="grid">
     <div class="hero">
