--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
     <div class="margin-16px max-width-700">
         <div>
             <p>
-                Mosaic is an experimental research lab focused on <b>reducing the risks from advanced AI by improving
-                    the
-                    quality of human reasoning</b>. We build interfaces for <b>AI-mediated collective reasoning and
-                    deliberation</b>,
-                and conduct research into how AI assistance can help humans collaboratively solve problems.
+                Mosaic is an experimental research lab focused on <b>reducing the risks from advanced AI</b> by
+                improving the quality of human reasoning. We build interfaces for AI-mediated collective reasoning
+                and deliberation, and conduct research into how AI assistance can help humans collaboratively
+                solve problems.
             </p>
             <p>
                 Rapid developments in AI are quickly transforming the future of reasoning, communication, and conflict.
                 Our goal is to <b>ambitiously apply AI to collective deliberation problems</b>, explore the frontier of
-                human-machine collaboration, and to <b>keep human reasoning at the center of institutional
-                    decision-making</b>.
+                human-machine collaboration, and to keep human reasoning at the center of institutional
+                decision-making.
             </p>
         </div>
         <div class="sections" id="accordion">
