Update contact email

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <hr>
         <footer>
             <p class="nowrap">&copy; 2024 Mosaic Labs</p>
-            <a href="mailto:hello@sofiavanhanen.fi" style="margin-left: auto;">Get in touch</a>
+            <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto;">Get in touch</a>
         </footer>
     </div>
 </body>
