--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
         </div>
         <hr>
         <footer>
-            <p class="nowrap">&copy; 2024 Mosaic Labs</p>
+            <p class="nowrap">&copy;
+                <script>document.write(new Date().getFullYear())</script> Mosaic Labs
+            </p>
             <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto;">Get in touch</a>
         </footer>
     </div>
