--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mosaic Labs</title>
     <meta name="description" content="Building interfaces for AI-assisted collaboration and deliberation">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <meta property="og:type" content="website">
@@ -134,15 +138,17 @@
             <div class="flex-horizontal wrap">
                 <div class="team-member text-center">
                     <img src="images/niki.jpeg" alt="Nicholas Dupuis" class="team-member-image">
-                    <a style="display: block; margin: 8px;" href="https://www.lesswrong.com/users/nicholaskees">Nicholas
+                    <a style="display: block; margin: 8px; font-size: 1.1rem;"
+                        href="https://www.lesswrong.com/users/nicholaskees">Nicholas
                         Dupuis</a>
-                    <div class="text-center" style="font-size: 0.8rem; color: var(--text-dark);">Research Lead
+                    <div class="text-center" style="font-size: 0.9rem; color: var(--text-dark);">Research Lead
                     </div>
                 </div>
                 <div class="team-member text-center">
                     <img src="images/sofi.jpeg" alt="Sofia Vanhanen" class="team-member-image">
-                    <a style="display: block; margin: 8px;" href="https://sofiavanhanen.fi">Sofia Vanhanen</a>
-                    <div style="font-size: 0.8rem; color: var(--text-dark);">Technology Lead
+                    <a style="display: block; margin: 8px; font-size: 1.1rem;" href="https://sofiavanhanen.fi">Sofia
+                        Vanhanen</a>
+                    <div style="font-size: 0.9rem; color: var(--text-dark);">Technology Lead
                     </div>
                 </div>
             </div>
@@ -152,7 +158,7 @@
             <p class="nowrap">&copy;
                 <script>document.write(new Date().getFullYear())</script> Mosaic Labs
             </p>
-            <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto;">Get in touch</a>
+            <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto; font-size: 1.1rem;">Get in touch</a>
         </footer>
     </div>
 </body>
