--- a/index.html
+++ b/index.html
@@ -134,6 +134,38 @@
             </details>
         </div>
         <div>
+            <h2>Projects</h2>
+            <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                    <h3>
+                        <a href="https://mindmeldtool.netlify.app">MindMeld</a>: AI-mediated deliberation
+                    </h3>
+                    <p>
+                        MindMeld is a work-in-progress, experimental platform for AI-mediated group deliberation. It
+                        uses
+                        large language models to help groups understand each other better and surface insights and
+                        solutions
+                        that wouldn't have been found otherwise.
+                    </p>
+                </div>
+                <div style="margin: calc(var(--spacing-unit) * 2) 0">
+                    <h3>
+                        Past projects
+                    </h3>
+                    <h4>
+                        <a href="https://pantheon.chat">Pantheon</a>: AI-facilitated metacognition
+                    </h4>
+                    <p>
+                        Pantheon is an experimental AI-facilitated metacognition tool and research prototype exploring
+                        new
+                        ways to use LLMs to improve human thinking. Intricate, customizable AI characters and a novel,
+                        tree-like UI structure empower the user to think and work in new ways.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div>
             <h2>Team</h2>
             <div class="flex-horizontal wrap">
                 <div class="team-member text-center">
