--- a/index.html
+++ b/index.html
@@ -169,19 +169,23 @@
         <div>
             <h2>Team</h2>
             <div class="flex-horizontal wrap">
-                <div class="team-member text-center">
+                <div class="team-member flex-horizontal">
                     <img src="images/niki.jpeg" alt="Nicholas Dupuis" class="team-member-image">
-                    <a style="display: block; margin: 8px; font-size: 1.1rem;"
-                        href="https://www.lesswrong.com/users/nicholaskees">Nicholas
-                        Dupuis</a>
-                    <div class="text-center" style="font-size: 0.9rem; color: var(--text-dark);">Research Lead
+                    <div class="flex-vertical">
+                        <a style="display: block; margin: 8px; font-size: 1.1rem;"
+                            href="https://www.lesswrong.com/users/nicholaskees">Nicholas
+                            Dupuis</a>
+                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">Research Lead
+                        </div>
                     </div>
                 </div>
-                <div class="team-member text-center">
+                <div class="team-member flex-horizontal">
                     <img src="images/sofi.jpeg" alt="Sofia Vanhanen" class="team-member-image">
-                    <a style="display: block; margin: 8px; font-size: 1.1rem;" href="https://sofiavanhanen.fi">Sofia
-                        Vanhanen</a>
-                    <div style="font-size: 0.9rem; color: var(--text-dark);">Technology Lead
+                    <div class="flex-vertical">
+                        <a style="display: block; margin: 8px; font-size: 1.1rem;" href="https://sofiavanhanen.fi">Sofia
+                            Vanhanen</a>
+                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">Technology Lead
+                        </div>
                     </div>
                 </div>
             </div>
