--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <hr>
         <footer>
             <p class="nowrap">&copy;
-                <script>document.write(new Date().getFullYear())</script> Mosaic Labs
+                <script>document.write('2024-' + new Date().getFullYear())</script> Mosaic Labs
             </p>
             <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto; font-size: 1.1rem;">Get in touch</a>
         </footer>
