--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
                         <a style="display: block; margin: 8px; font-size: 1.1rem;"
                             href="https://www.lesswrong.com/users/nicholaskees">Nicholas
                             Dupuis</a>
-                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">Research Lead
+                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
+                            <div>Co-founder</div>
+                            <div>Research Lead</div>
                         </div>
                     </div>
                 </div>
@@ -184,7 +186,9 @@
                     <div class="flex-vertical">
                         <a style="display: block; margin: 8px; font-size: 1.1rem;" href="https://sofiavanhanen.fi">Sofia
                             Vanhanen</a>
-                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">Technology Lead
+                        <div style="font-size: 0.8rem; color: var(--text-light); margin-left: 8px;">
+                            <div>Co-founder</div>
+                            <div>Technology Lead</div>
                         </div>
                     </div>
                 </div>
