Update 'MindMeld' -> Nexus

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
             <div style="margin: calc(var(--spacing-unit) * 4) 0">
                 <div style="margin: calc(var(--spacing-unit) * 4) 0">
                     <h3>
-                        <a href="https://mindmeldtool.netlify.app">MindMeld</a>: AI-mediated deliberation
+                        <a href="https://nexus-tool.com">Nexus</a>: AI-mediated deliberation
                     </h3>
                     <p>
-                        MindMeld is a work-in-progress, experimental platform for AI-mediated group deliberation. It
+                        Nexus is a work-in-progress, experimental platform for AI-mediated group deliberation. It
                         uses
                         large language models to help groups understand each other better and surface insights and
                         solutions
