Update footer and add Discord link

--- a/index.html
+++ b/index.html
@@ -203,15 +203,39 @@
                     <input type="email" name="email" id="bd-email" placeholder="your@email.com" required>
                     <input type="submit" value="Subscribe" class="submit-btn">
                 </div>
-                <small class="privacy-notice">We'll only send occasional updates about our projects.</small>
+                <small class="privacy-notice">
+                    We'll only send occasional updates about our projects.
+                    <br>
+                    Consider also joining our
+                    <a href="https://discord.gg/Ua3eYqsmyn">Discord</a>
+                    for more frequent updates.
+                </small>
             </form>
         </div>
         <hr>
         <footer>
-            <p class="nowrap">&copy;
-                <script>document.write(new Date().getFullYear())</script> Mosaic Labs
-            </p>
-            <a href="mailto:hello@mosaic-labs.org" style="margin-left: auto; font-size: 1.1rem;">Get in touch</a>
+            <div style="flex: 1;">
+                <h1 style="font-size: 2rem; margin-top: 0;">Mosaic Labs</h1>
+                <div class="nowrap">&copy;
+                    <script>document.write(new Date().getFullYear())</script>
+                </div>
+            </div>
+            <div class="footer-links">
+                <h4>LINKS</h4>
+                <ul>
+                    <li><a href="https://nexus-tool.com">Nexus</a></li>
+                    <li><a href="https://pantheon.chat">Pantheon</a></li>
+                    <li><a href="https://github.com/sofvanh">GitHub</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>CONTACT</h4>
+                <ul>
+                    <li><a href="https://buttondown.com/mosaic-labs">Newsletter</a></li>
+                    <li><a href="https://discord.gg/Ua3eYqsmyn">Discord</a></li>
+                    <li><a href="mailto:hello@mosaic-labs.org">Email</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
