--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
     <div class="margin-16px max-width-700">
         <div>
             <p>
-                Mosaic is an experimental research lab focused on <b>reducing the risks from advanced AI</b> by
-                improving the quality of human reasoning. We build interfaces for AI-mediated collective reasoning
-                and deliberation, and conduct research into how AI assistance can help humans collaboratively
-                solve problems.
+                Mosaic is a non-profit R&D lab working to <b>help groups coordinate, reason effectively, and resolve
+                    conflict</b>.
+                We are building interfaces which support new kinds of collaborative discussions, promote overlooked
+                perspectives,
+                and encourage nuanced exploration of conflicting viewpoints.
             </p>
             <p>
                 Rapid developments in AI are quickly transforming the future of reasoning, communication, and conflict.
                 Our goal is to <b>ambitiously apply AI to collective deliberation problems</b>, explore the frontier of
-                human-machine collaboration, and to keep human reasoning at the center of institutional
-                decision-making.
+                human-machine collaboration, and to keep human reasoning at the center of important decision making.
             </p>
         </div>
         <div class="sections" id="accordion">
@@ -60,36 +60,34 @@
                 <summary>Differential Development</summary>
                 <div class="details-content">
                     <p>
-                        When atomic energy was developed, people gained the power both to produce green energy and to
-                        kill millions. They did not gain the wisdom to use that power responsibly, nor the ability
-                        to ensure their power was used cooperatively for the good of all.
+                        Technological progress does not guarantee we use new technology responsibly, nor that we manage
+                        to achieve cooperative and mutually beneficial outcomes.
                     </p>
                     <p>
-                        To safely navigate the risk of advanced AI, we need technology which enables coordination,
-                        empowers human groups to think clearly, and prevents disastrous conflicts. <b>The order in which
-                            technology is developed matters</b>. We aim to accelerate work which uses recent advances in
-                        AI
-                        capabilities to enable better collective reasoning and coordination, and gives people the
-                        ability to
-                        navigate an uncertain future.
+                        To safely navigate our future, we need systems which directly enable coordination, empowers
+                        human
+                        groups to think clearly, and prevents disastrous conflicts. <b>The order we develop technology
+                            matters</b>.
+                        By accelerating work which uses recent advances in AI capabilities to enable better collective
+                        reasoning and coordination, we aim to give people the ability to navigate an uncertain future.
                     </p>
                 </div>
             </details>
             <details>
-                <summary>Architectures for Cooperation</summary>
+                <summary>Human-centered Design</summary>
                 <div class="details-content">
                     <p>
-                        Our mission is to improve human reasoning at the group level, focusing on the ways in which
-                        people communicate information and resolve disagreements. In particular, we are prototyping the
-                        use of
-                        <b>AI to mediate group deliberation</b>. This means both using AI to intervene on the dynamics
-                        of
-                        a discussion, as well as being an interface for people to better understand the content of what
-                        is
-                        being discussed. We are pioneering new architectures for group dialogue and reasoning, finding
-                        ways to integrate the unique abilities of AI systems while keeping humans and human reasoning at
-                        the
-                        center.
+                        AI systems are improving rapidly. For this reason, it is important that work to augment human
+                        reasoning
+                        <b>improves alongside AI capability advancements</b>, and is not replaced or made obsolete by
+                        them.
+                    </p>
+                    <p>
+                        We are especially concerned about the impulse to outsource reasoning to AI systems, and to
+                        <b>fully replace humans in the
+                            deliberation process</b>. In order to keep humans at the center, we are working
+                        to develop and demonstrate methods for using AI mediation to support and enhance human-lead
+                        discussions.
                     </p>
                 </div>
             </details>
@@ -97,39 +95,17 @@
                 <summary>Code as a Catalyst</summary>
                 <div class="details-content">
                     <p>
-                        We are building experimental interfaces which test new strategies for AI-mediated collective
-                        deliberation. By testing and demonstrating new methods, we aim to <b>grow a movement</b>
-                        directed
-                        toward improved human reasoning, large scale collaboration, and coordinated action.
+                        By testing and demonstrating new methods for AI-assisted deliberation, we aim to help <b>support
+                            a movement</b> directed toward
+                        improving human reasoning, large scale collaboration, and coordinated action.
                     </p>
                     <p>
-                        Software can often serve as a <b>nucleation site for dialogue</b>, and become a part of the
-                        ontology we
-                        use to think about the future (e.g. <a href="https://mastodon.social">federated social
-                            networks</a>,
-                        <a href="https://compdemocracy.org/Polis/">Polis</a>/<a
-                            href="https://communitynotes.x.com/guide/en/about/introduction">Community Notes</a>,
-                        or <a href="https://generative.ink/posts/loom-interface-to-the-multiverse/">Loom</a>). Our
-                        philosophy is to advance the discussion about AI development by building software which embodies
-                        our vision for the future.
-                    </p>
-                </div>
-            </details>
-            <details>
-                <summary>Scaling to Superhuman AI</summary>
-                <div class="details-content">
-                    <p>
-                        AI systems are improving rapidly. For this reason, it's important that work to augment human
-                        reasoning <b>improves alongside AI capability advancements</b>, and is not replaced or made
-                        obsolete by
-                        them. Better human reasoning and decision making is critical to navigating the transition
-                        to superhuman AI safely, and making the right choices about how to engineer the future we want.
-                    </p>
-                    <p>
-                        We are especially concerned that <b>important reasoning may be totally outsourced to AI
-                            systems</b>. For
-                        this reason we are dedicated to keeping humans at the center of our interfaces, and focus our
-                        research on how AI mediation can support entirely human-lead reasoning and discussion.
+                        We believe software tools can serve as a catalyst for social change by both demonstrating what
+                        is
+                        possible, as well as <b>becoming a part of the language we use to imagine the future</b>. Our
+                        goal is to
+                        advance the discussion about AI's role in society by building software which concretely embodies
+                        our ideas.
                     </p>
                 </div>
             </details>
