Fix preview image

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <meta property="og:url" content="https://www.mosaic-labs.org/">
     <meta property="og:title" content="Mosaic Labs">
     <meta property="og:description" content="Building interfaces for AI-assisted collaboration and deliberation">
+    <meta property="og:image" content="https://www.mosaic-labs.org/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:url" content="https://www.mosaic-labs.org/">
     <meta property="twitter:title" content="Mosaic Labs">
     <meta property="twitter:description" content="Building interfaces for AI-assisted collaboration and deliberation">
+    <meta property="twitter:image" content="https://www.mosaic-labs.org/og-image.jpg">
 </head>
 
 <!-- Google tag (gtag.js) -->
