Add "Built with support from"

--- a/index.html
+++ b/index.html
@@ -118,9 +118,13 @@
             <h2>Projects</h2>
             <div style="margin: calc(var(--spacing-unit) * 4) 0">
                 <div style="margin: calc(var(--spacing-unit) * 4) 0">
-                    <h3>
+                    <h3 style="margin-bottom: 6px">
                         <a href="https://nexus-tool.com">Nexus</a>: AI-mediated deliberation
                     </h3>
+                    <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
+                        Built with support from
+                        <a href="https://lightspeedgrants.org/">Lightspeed Grants</a>
+                    </p>
                     <p>
                         Nexus is a work-in-progress, experimental platform for AI-mediated group deliberation. It
                         uses
@@ -129,13 +133,14 @@
                         that wouldn't have been found otherwise.
                     </p>
                 </div>
-                <div style="margin: calc(var(--spacing-unit) * 2) 0">
-                    <h3>
-                        Past projects
-                    </h3>
-                    <h4>
+                <div style="margin: calc(var(--spacing-unit) * 4) 0">
+                    <h3 style="margin-bottom: 6px">
                         <a href="https://pantheon.chat">Pantheon</a>: AI-facilitated metacognition
-                    </h4>
+                    </h3>
+                    <p style="color: var(--text-light); font-size: 1.0rem; margin-top: 6px">
+                        Built with support from the
+                        <a href="https://funds.effectivealtruism.org/funds/far-future">Long-Term Future Fund</a>
+                    </p>
                     <p>
                         Pantheon is an experimental AI-facilitated metacognition tool and research prototype exploring
                         new
