--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                         to achieve cooperative and mutually beneficial outcomes.
                     </p>
                     <p>
-                        To safely navigate our future, we need systems which directly enable coordination, empowers
-                        human
-                        groups to think clearly, and prevents disastrous conflicts. <b>The order we develop technology
+                        To safely navigate our future, we need systems which directly enable coordination, empower human
+                        groups to think clearly, and prevent disastrous conflicts. <b>The order we develop technology
                             matters</b>.
                         By accelerating work which uses recent advances in AI capabilities to enable better collective
                         reasoning and coordination, we aim to give people the ability to navigate an uncertain future.
