--- a/index.html
+++ b/index.html
@@ -25,17 +25,10 @@
     <meta property="twitter:title" content="Mosaic Labs">
     <meta property="twitter:description" content="Building interfaces for AI-assisted collaboration and deliberation">
     <meta property="twitter:image" content="https://mosaic-labs.org/images/og-image.jpg">
+
+    <script src="components/gtag-component.js" defer></script>
+    <script src="components/footer-component.js" defer></script>
 </head>
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YXHBJ67PXC"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-YXHBJ67PXC');
-</script>
 
 <body class="grid">
     <div class="hero">
@@ -197,30 +190,7 @@
             </form>
         </div>
         <hr>
-        <footer>
-            <div style="flex: 1;">
-                <h1 style="font-size: 2rem; margin-top: 0;">Mosaic Labs</h1>
-                <div class="nowrap">&copy;
-                    <script>document.write(new Date().getFullYear())</script>
-                </div>
-            </div>
-            <div class="footer-links">
-                <h4>LINKS</h4>
-                <ul>
-                    <li><a href="https://nexus-tool.com">Nexus</a></li>
-                    <li><a href="https://pantheon.chat">Pantheon</a></li>
-                    <li><a href="https://github.com/sofvanh">GitHub</a></li>
-                </ul>
-            </div>
-            <div class="footer-links">
-                <h4>CONTACT</h4>
-                <ul>
-                    <li><a href="https://buttondown.com/mosaic-labs">Newsletter</a></li>
-                    <li><a href="https://discord.gg/Ua3eYqsmyn">Discord</a></li>
-                    <li><a href="mailto:hello@mosaic-labs.org">Email</a></li>
-                </ul>
-            </div>
-        </footer>
+        <footer-component></footer-component>
     </div>
 </body>
 
